--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <title>food website</title>
+    <title>Food Website</title>
 </head>
 
 <body>
     <header class="header">
-        <a href="#" class="logo"><i class="fas fa-utensils"></i> food </a>
+        <a href="#home" class="logo"><i class="fas fa-utensils"></i> food </a>
         <nav class="navbar">
             <a href="#home">home</a>
             <a href="#about">Sobre nos</a>
@@ -142,7 +142,7 @@
             <span>Seja bem-vindos </span>
             <h3>Especiarias para os diferentes tipo gostos😋</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis unde dolores temporibus hic quam debitis tenetur harum nemo.</p>
-            <a href="#" class="btn">order now</a>
+            <a href="#" class="btn">Peça agora</a>
         </div>
 
         <div class="image">
@@ -405,6 +405,235 @@
             </div>
         </div>
     </section>
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>nosso cardápio</span>
+            <h3>nossos pratos especiais</h3>
+        </div>
+        <div class="box-container">
+            <a href="#" class="box">
+                <img src="image/menu-1.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+            <a href="#" class="box">
+                <img src="image/menu-2.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+            <a href="#" class="box">
+                <img src="image/menu-3.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+            <a href="#" class="box">
+                <img src="image/menu-4.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+            <a href="#" class="box">
+                <img src="image/menu-5.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+            <a href="#" class="box">
+                <img src="image/menu-6.png" alt="">
+                <div class="content">
+                    <h3>saboroso hamburguer</h3>
+                    <div class="price">R$40,00</div>
+                </div>
+            </a>
+        </div>
+    </section>
+    <section class="order" id="order">
+        <div class="heading">
+            <span>peça agora</span>
+            <h3>entrega em domicílio mais rápida</h3>
+        </div>
+        <div class="icons-container">
+            <div class="icons">
+                <img src="image/icon-1.png" alt="">
+                <h3>18:00 as 23:50</h3>
+            </div>
+            <div class="icons">
+                <img src="image/icon-2.png" alt="">
+                <h3>(31)9999-9494</h3>
+            </div>
+            <div class="icons">
+                <img src="image/icon-3.png" alt="">
+                <h3>belo horizonte, brasil, 5020</h3>
+            </div>
+        </div>
+        <form action="#">
+            <div class="flex">
+                <div class="inputbox">
+                    <span>Seu nome</span>
+                    <input type="text" name="" id="" placeholder="entre com seu nome">
+                </div>
+                <div class="inputbox">
+                    <span>Seu numero telefone</span>
+                    <input type="text" name="" id="" placeholder="entre com seu numero">
+
+                </div>
+            </div>
+            <div class="flex">
+                <div class="inputbox">
+                    <span>Seu pedido</span>
+                    <input type="text" name="" id="" placeholder="entre numero numero do pedido">
+                </div>
+                <div class="inputbox">
+                    <span>quatidade</span>
+                    <input type="number" name="" id="" placeholder="quatidade">
+
+                </div>
+            </div>
+            <div class="flex">
+                <div class="inputbox">
+                    <span>observação</span>
+                    <input type="text" name="" id="" placeholder="campo observação">
+                </div>
+                <div class="inputbox">
+                    <span>hora é data entrega</span>
+                    <input type="datetime-local">
+
+                </div>
+            </div>
+            <div class="flex">
+                <div class="inputbox">
+                    <span>Seu endereço</span>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="campo endereço "></textarea>
+                </div>
+
+                <div class="inputbox">
+                    <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.1755236984372!2d-43.928467585634955!3d-19.874808941726638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69a8aeb7e3abf%3A0x7d9ad771c63eb1c8!2sMinas%20Shopping!5e0!3m2!1spt-BR!2sbr!4v1635522313690!5m2!1spt-BR!2sbr"
+                        allowfullscreen="" loading="lazy"></iframe>
+                </div>
+            </div>
+            <input type="submit" value="Continuar compra" class="btn">
+        </form>
+    </section>
+    <section class="blog" id="blog">
+        <div class="heading">
+            <span>nossos blogs</span>
+            <h3>nossas postagens diárias</h3>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <h3><i class="fas fa-calendar"></i> 10 Março 2021 </h3>
+                    <img src="image/blog-1.jpg" alt="">
+                </div>
+                <div class="content">
+                    <div class="tag">
+                        <a href="#"><i class="fas fa-tag"></i> comida</a>
+                        <a href="#"><i class="fas fa-tag"></i> hamburguer </a>
+                        <a href="#"><i class="fas fa-tag"></i> pizza </a>
+                    </div>
+                    <h3>historia da comida...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, expedita.</p>
+                    <a href="#" class="btn">saiba mais</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <h3><i class="fas fa-calendar"></i> 10 Março 2021 </h3>
+                    <img src="image/blog-2.jpg" alt="">
+                </div>
+                <div class="content">
+                    <div class="tag">
+                        <a href="#"><i class="fas fa-tag"></i> comida</a>
+                        <a href="#"><i class="fas fa-tag"></i> hamburguer </a>
+                        <a href="#"><i class="fas fa-tag"></i> pizza </a>
+                    </div>
+                    <h3>historia da comida...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, expedita.</p>
+                    <a href="#" class="btn">saiba mais</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <h3><i class="fas fa-calendar"></i> 10 Março 2021 </h3>
+                    <img src="image/blog-3.jpg" alt="">
+                </div>
+                <div class="content">
+                    <div class="tag">
+                        <a href="#"><i class="fas fa-tag"></i> comida</a>
+                        <a href="#"><i class="fas fa-tag"></i> hamburguer </a>
+                        <a href="#"><i class="fas fa-tag"></i> pizza </a>
+                    </div>
+                    <h3>historia da comida...</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, expedita.</p>
+                    <a href="#" class="btn">saiba mais</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="newsletter">
+            <h3>Fique por dentro das nossas noticias</h3>
+            <form action="#">
+                <input type="email" name="" id="" placeholder="campo de e-mail">
+                <input type="submit" value="se increvar">
+            </form>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <h3>nosso cardápio</h3>
+                <a href="#">pizza</a>
+                <a href="#">hamburguer</a>
+                <a href="#">chicknen</a>
+                <a href="#">pasta</a>
+                <a href="#">é mais...</a>
+            </div>
+            <div class="box">
+                <h3>links rapido</h3>
+                <a href="#home"><i class="fas fa-arrow-right"></i>home</a>
+                <a href="#about"><i class="fas fa-arrow-right"></i>Sobre nos</a>
+                <a href="#popular"><i class="fas fa-arrow-right"></i>popular</a>
+                <a href="#menu"><i class="fas fa-arrow-right"></i>menu</a>
+                <a href="#order"><i class="fas fa-arrow-right"></i>pedido</a>
+                <a href="#blog"><i class="fas fa-arrow-right"></i>blog</a>
+            </div>
+            <div class="box">
+                <h3>links extra</h3>
+                <a href="#"><i class="fas fa-arrow-right"></i>meu pedido</a>
+                <a href="#"><i class="fas fa-arrow-right"></i>minha conta</a>
+                <a href="#"><i class="fas fa-arrow-right"></i>meu favoritos</a>
+                <a href="#"><i class="fas fa-arrow-right"></i>termos de uso</a>
+                <a href="#"><i class="fas fa-arrow-right"></i>política de Privacidade</a>
+            </div>
+            <div class="box">
+                <h3>horário de funcionamento</h3>
+                <p>segunda: fechado</p>
+                <p>terça: 18:00 as 23:50</p>
+                <p>quarta: 18:00 as 23:50</p>
+                <p>quinta: 18:00 as 23:50</p>
+                <p>sexta: 18:00 as 23:50</p>
+                <p>sabado: 18:00 as 23:50</p>
+                <p>domingo: 18:00 as 23:50</p>
+            </div>
+        </div>
+        <div class="bottom">
+            <div class="share">
+                <a href="#" class="fab fa-facebook-f"></a>
+                <a href="#" class="fab fa-twitter"></a>
+                <a href="#" class="fab fa-instagram"></a>
+                <a href="#" class="fab fa-linkedin"></a>
+                <a href="#" class="fab fa-pinterest"></a>
+            </div>
+            <div class="credit">criado <span>Ronald Alves</span> | todo direito reservado</div>
+        </div>
+    </footer>
     <script src="js/script.js"></script>
 </body>
 
